--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"npm": "8.3.1"
 	},
 	"scripts": {
-		"start": "nodemon index",
+		"start": "node index.js",
 		"heroku-postbild": "cd ./client && npm install && npm run build"
 	},
 	"author": "",
