--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
 		"npm": "8.3.1"
 	},
 	"scripts": {
-		"start": "node index.js",
-		"heroku-postbuild": "cd client && npm install && npm run build"
+		"start": "node index.js"
 	},
 	"author": "",
 	"license": "ISC",
