--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"react-dom": "^17.0.2",
 		"react-gravatar": "^2.6.3",
 		"react-icons": "^4.3.1",
+		"react-password-strength-bar": "^0.4.0",
 		"react-redux": "^7.2.6",
 		"react-router": "^6.2.2",
 		"react-router-dom": "^6.2.2",
