--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"jsonwebtoken": "^8.5.1",
+		"nodemon": "^2.0.15",
 		"pg": "^8.7.3",
 		"sequelize": "^6.17.0"
 	}
